# libs/data-access/src/lib/models.ts
@@ -9,9 +9,11 @@ export type { HealthLiveDto } from './models/health-live-dto';
 export type { HealthReadyDto } from './models/health-ready-dto';
 export type { LiveTestDto } from './models/live-test-dto';
 export type { MeDto } from './models/me-dto';
+export type { RefreshDto } from './models/refresh-dto';
 export type { SessionDto } from './models/session-dto';
 export type { SignInDto } from './models/sign-in-dto';
 export type { SignUpDto } from './models/sign-up-dto';
+export type { SwitchRoleDto } from './models/switch-role-dto';
 export type { TestMessageDto } from './models/test-message-dto';
 export type { TestMessageQueuedDto } from './models/test-message-queued-dto';
 export type { UpdateMeDto } from './models/update-me-dto';
